<resources>
    <string name="dme_app_name">ComputerVision</string>
    <string name="app_version">2.2</string>
    <string name="org_name">MobiledgeX-Samples</string>

    <string name="pref_matching_engine_settings">Matching Engine Settings</string>
    <string name="pref_general_settings">General Settings</string>

    <string-array name="pref_dme_hostname_titles">
        <item>Demo (mexdemo)</item>
    </string-array>
    <string-array name="pref_dme_hostname_values">
        <item>eu-mexdemo.dme.mobiledgex.net:50051</item>
    </string-array>

    <string name="verify_clear_logs_title">Clear Log Viewer</string>
    <string name="verify_clear_logs_message">Are you sure you want to clear the log entries?</string>

    <string name="pref_default_app_definition">pref_default_app_definition</string>
    <string name="pref_value_default_app_definition">pref_value_default_app_definition</string>
    <string name="pref_title_default_app_definition">Use Default App Definition</string>
    <string name="pref_summary_default_app_definition">These values may be overridden to show a different set of app instances.</string>
    <string name="pref_app_name">pref_app_name</string>
    <string name="pref_title_app_name">App Name</string>
    <string name="pref_app_version">pref_app_version</string>
    <string name="pref_title_app_version">App Version</string>
    <string name="pref_org_name">pref_org_name</string>
    <string name="pref_title_org_name">Organization Name</string>

    <string name="pref_operator_name">pref_operator</string>
    <string name="pref_title_operator_name">Operator</string>
    <string name="pref_summary_operator_name">The operator or carrier name</string>
    <string name="pref_default_operator_name">pref_default_operator</string>
    <string name="pref_value_default_operator_name">pref_value_default_operator</string>
    <string name="pref_title_default_operator_name">Use Default Operator</string>
    <string name="pref_summary_default_operator_name">The operator or carrier name from the cellular provider</string>
    <string name="pref_dme_hostname">pref_dme_hostname</string>
    <string name="pref_title_dme_hostname">Region Selection</string>
    <string name="pref_summary_dme_hostname">Select region to display</string>
    <string name="pref_default_dme_hostname">pref_default_dme_hostname</string>
    <string name="pref_value_default_dme_hostname">pref_value_default_dme_hostname</string>
    <string name="pref_title_default_dme_hostname">Use Default Region Selection</string>
    <string name="pref_summary_default_dme_hostname">Region determined by the cellular provider</string>
    <string name="pref_allow_qos_session_dialog">pref_allow_qos_session_dialog</string>
    <string name="pref_allow_qos_session_dialog_title">Allow QOS Priority Sessions Config</string>
    <string name="pref_allow_qos_session_dialog_summary">If enabled, the "Update QOS Session" dialog will appear in the options menu.</string>

    <string name="pref_first_time_use">first_time_use</string>
    <string name="pref_allow_find_before_verify">allow_find_before_verify</string>
    <string name="pref_enhanced_location_permission">This application uses enhanced features of carrier networks to validate your device location. Please enable in Matching Engine Settings.</string>
    <string name="pref_matching_engine_location_verification">location_verification</string>
    <string name="pref_matching_engine_location_verification_title">Location Verification</string>
    <string name="pref_matching_engine_location_verification_summary">Enhanced Network Location Services</string>
    <string name="pref_net_switching_allowed">net_switching_allowed</string>
    <string name="pref_net_switching_allowed_title">Network Switching Enabled</string>
    <string name="pref_net_switching_allowed_summary">Wifi to Cell network switching</string>
    <string name="pref_use_wifi_only">use_wifi_only</string>
    <string name="pref_use_wifi_only_title">Use Wifi Only</string>
    <string name="pref_use_wifi_only_summary">Disables using the mobile network</string>
    <string name="pref_matching_engine_ssl">matching_engine_ssl</string>
    <string name="pref_matching_engine_ssl_title">Use SSL</string>
    <string name="pref_matching_engine_ssl_summary">Connect to DME using SSL</string>

    <string name="pref_find_cloudlet_mode">find_cloudlet_mode</string>
    <string name="pref_find_cloudlet_mode_title">FindCloudlet Mode</string>
    <string name="pref_find_cloudlet_mode_summary">%s</string>
    <string-array name="pref_find_cloudlet_mode_titles">
        <item>Proximity</item>
        <item>Performance</item>
    </string-array>
    <string-array name="pref_find_cloudlet_mode_values">
        <item>PROXIMITY</item>
        <item>PERFORMANCE</item>
    </string-array>

    <string name="pref_app_instances_limit">app_instances_limit</string>
    <string name="pref_app_instances_limit_title">Get App Instances Limit</string>
    <string name="pref_app_instances_limit_summary">The max number of cloudlets to display: %s</string>

    <string name="pref_google_map_type">pref_google_map_type</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings for Edge Events -->
    <string name="pref_edge_events_config">Edge Events Config</string>
    <string name="pref_enable_edge_events">pref_enable_edge_events</string>
    <string name="pref_enable_edge_events_title">Enable Edge Events</string>
    <string name="pref_enable_edge_events_summary">summary</string>
    <string name="pref_override_default_config">pref_override_default_config</string>
    <string name="pref_override_default_config_title">Override Edge Events Default Config</string>
    <string name="pref_override_default_config_summary">When turned off, default values from the SDK are used.</string>

    <string name="pref_latency_test_port">pref_latency_test_port</string>
    <string name="pref_latency_test_port_title">Latency Test Port</string>
    <string name="pref_latency_test_port_summary"><b>%s</b> - Port to use for latency testing. Use 0 to test any app port.</string>
    <string name="pref_latency_test_type">pref_latency_test_type</string>
    <string name="pref_latency_test_type_title">Latency Test Type</string>
    <string name="pref_latency_test_type_summary"><b>%s</b> - The type of latency test to be used.</string>
    <string-array name="pref_latency_test_type_titles">
        <item>Ping</item>
        <item>Connect</item>
    </string-array>
    <string-array name="pref_latency_test_type_values">
        <item>PING</item>
        <item>CONNECT</item>
    </string-array>

    <string name="pref_latency_threshold_ms">pref_latency_threshold_ms</string>
    <string name="pref_latency_threshold_ms_title">Latency Threshold (ms)</string>
    <string name="pref_latency_threshold_ms_summary"><b>%s</b> - Latency Threshold (ms)", "Latency threshold in ms when new FindCloudlet is triggered if eventLatencyProcessed is in newFindCloudletEvents.</string>
    <string name="pref_latency_test_trigger_mode">pref_latency_test_trigger_mode</string>
    <string name="pref_latency_test_trigger_mode_title">Latency Test Trigger Mode</string>
    <string name="pref_latency_test_trigger_mode_summary"><b>%s</b> - Determines how a latency test is triggered.</string>
    <string name="pref_automigration">pref_automigration</string>
    <string name="pref_automigration_title">AutoMigration</string>
    <string name="pref_automigration_summary">Allow MobiledgeX EdgeEvents to automatically stop the current EdgeEvents connection and start a new EdgeEvents connection to receive events from the new cloudlet.</string>
    <string name="pref_perf_margin_switch">pref_perf_margin_switch</string>
    <string name="pref_perf_margin_switch_title">Performance Margin Switch</string>
    <string name="pref_perf_margin_switch_summary">Average performance must be by better by this latency margin (0 to 100%) before notifying of switch.</string>

    <string name="pref_FindCloudletEventTrigger">pref_FindCloudletEventTrigger</string>
    <string name="pref_FindCloudletEventTrigger_title">FindCloudlet Event Triggers</string>
    <string name="pref_FindCloudletEventTrigger_summary">Choose which events will trigger FindCloudlet to be performed.</string>
    <string-array name="pref_FindCloudletEventTrigger_titles">
        <item>Cloudlet State Changed</item>
        <item>App Inst Health Changed</item>
        <item>Cloudlet Maintenance State Changed</item>
        <item>Latency Too High</item>
        <item>Closer Cloudlet</item>
    </string-array>
    <string-array name="pref_FindCloudletEventTrigger_values">
        <item>CloudletStateChanged</item>
        <item>AppInstHealthChanged</item>
        <item>CloudletMaintenanceStateChanged</item>
        <item>LatencyTooHigh</item>
        <item>CloserCloudlet</item>
    </string-array>


    <!-- Settings for Location Update Config -->
    <string name="pref_location_update_config">Location Update Config</string>
    <string name="pref_update_pattern_location">pref_update_pattern_location</string>
    <string name="pref_update_pattern_title">Update Pattern</string>
    <string name="pref_update_pattern_summary"><b>%s</b> - Update Pattern for sending client events. \'On Start\' will send one update when startEdgeEvents is called. \'On Interval\' will send updates at the specified interval. \'On Trigger\' means the application is responsible for sending the events.</string>
    <string-array name="pref_update_pattern_titles">
        <item>On Interval</item>
        <item>On Start</item>
        <item>On Trigger</item>
    </string-array>
    <string-array name="pref_update_pattern_values">
        <item>onInterval</item>
        <item>onStart</item>
        <item>onTrigger</item>
    </string-array>

    <string name="pref_update_interval_location">pref_update_interval_location</string>
    <string name="pref_update_interval_title">Update Interval</string>
    <string name="pref_update_interval_summary"><b>%s</b> - Update interval in seconds.</string>
    <string name="pref_max_num_updates_location">pref_max_num_updates_location</string>
    <string name="pref_max_num_updates_title">Max Number of Updates</string>
    <string name="pref_max_num_updates_summary"><b>%s</b> - Maximum number of updates throughout the App connection lifetime. Set to 0 for updates to run till the EdgeEvents connection is closed.</string>

    <!-- Settings for Latency Update Config -->
    <!-- Titles and summaries will reuse the values from Location Update Config -->
    <string name="pref_latency_update_config">Latency Update Config</string>
    <string name="pref_update_pattern_latency">pref_update_pattern_latency</string>
    <string name="pref_update_interval_latency">pref_update_interval_latency</string>
    <string name="pref_max_num_updates_latency">pref_max_num_updates_latency</string>

    <string name="action_elv_auto_expand">Auto Expand</string>
    <string name="action_elv_clear">Clear Logs</string>
    <string name="action_elv_copy">Copy All Items</string>

    <string name="pref_elv_auto_expand">pref_elv_aut_oexpand</string>

</resources>
