<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/matching_engine_preference_screen">

    <SwitchPreference
        android:id="@+id/preference_matching_engine_location_verification"
        android:contentDescription="preference_matching_engine_location_verification"
        android:key="@string/pref_matching_engine_location_verification"
        android:title="@string/pref_matching_engine_location_verification_title"
        android:summary="@string/pref_matching_engine_location_verification_summary"
        android:defaultValue="false"
        app:iconSpaceReserved="false"/>

    <SwitchPreference
        android:id="@+id/preference_net_switching_allowed"
        android:contentDescription="preference_net_switching_allowed"
        android:key="@string/pref_net_switching_allowed"
        android:title="@string/pref_net_switching_allowed_title"
        android:summary="@string/pref_net_switching_allowed_summary"
        android:defaultValue="false"
        app:iconSpaceReserved="false"/>

    <ListPreference
        android:defaultValue="PROXIMITY"
        android:entries="@array/pref_find_cloudlet_mode_titles"
        android:entryValues="@array/pref_find_cloudlet_mode_values"
        android:key="@string/pref_find_cloudlet_mode"
        android:summary="@string/pref_find_cloudlet_mode_summary"
        android:title="@string/pref_find_cloudlet_mode_title"
        app:iconSpaceReserved="false"/>

    <ListPreference
        android:defaultValue="4"
        android:entries="@array/pref_app_instances_limit_titles"
        android:entryValues="@array/pref_app_instances_limit_values"
        android:key="@string/pref_app_instances_limit"
        android:summary="@string/pref_app_instances_limit_summary"
        android:title="@string/pref_app_instances_limit_title"
        app:iconSpaceReserved="false"/>

    <PreferenceCategory android:title="@string/pref_edge_events_settings">
        <MultiSelectListPreference
            android:defaultValue="@array/pref_FindCloudletEventTrigger_values"
            android:entries="@array/pref_FindCloudletEventTrigger_titles"
            android:entryValues="@array/pref_FindCloudletEventTrigger_values"
            android:icon="@drawable/ic_baseline_cloud_circle_24"
            android:key="@string/pref_FindCloudletEventTrigger"
            android:summary="@string/pref_FindCloudletEventTrigger_summary"
            android:title="@string/pref_FindCloudletEventTrigger_title" />
        <Preference
            android:fragment="com.mobiledgex.matchingenginehelper.SettingsActivity$LocationEventsSettingsFragment"
            app:icon="@drawable/ic_baseline_my_location_24"
            android:title="@string/pref_location_events_settings"/>
        <Preference
            android:fragment="com.mobiledgex.matchingenginehelper.SettingsActivity$LatencyEventsSettingsFragment"
            app:icon="@drawable/ic_settings_network"
            android:title="@string/pref_latency_events_settings"/>
    </PreferenceCategory>

</PreferenceScreen>
